# CopyTraderPolymarket

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  PRD.md  README.md  alembic.ini  docker-compose.yml  plan.md  pyproject.toml  spec.md
.github/workflows/: ci.yml
app/: __init__.py  config.py
app/api/: main.py
app/api/routes/: admin.py  backtest.py  control.py  health.py  pnl.py  positions.py  signals.py  system.py  trades.py  wallets.py
app/backtest/: engine.py  grid_search.py  metrics.py  reports.py  walk_forward.py
app/data/: models.py  polymarket_rest.py  polymarket_ws.py  subgraph_client.py
app/execution/: base.py  circuit_breaker.py  exit_manager.py  kelly.py  live_executor.py  paper_executor.py  reconciliation.py
app/risk/: kill_switch.py  risk_manager.py
app/signals/: confidence.py  models.py  signal_engine.py
app/signals/strategies/: consensus.py  momentum_odds.py  whale_copy.py
app/storage/: db.py  models.py
app/storage/migrations/: env.py
app/tracker/: proxy_resolver.py  scoring.py  wallet_tracker.py
app/utils/: alerting.py  logger.py  metrics.py  time.py
config/: market_filters.yaml  strategies.yaml  tracked_wallets.yaml
scripts/: backfill_market_slugs.py  discover_wallets.py  seed_wallets_from_yaml.py
tests/unit/: test_alerting.py  test_api_main.py  test_api_routes.py  test_api_wallets.py  test_circuit_breaker.py  test_collector_worker.py  test_confidence.py  test_config.py  test_control_routes.py  test_execution_worker.py  test_exit_manager.py  test_health.py  test_kelly.py  test_kill_switch.py  test_logger.py  test_models.py  test_paper_executor.py  test_pnl_routes.py  test_polymarket_rest.py  test_polymarket_ws.py  test_proxy_resolver.py  test_risk_manager.py  test_scoring.py  test_signal_engine.py  test_signal_worker.py  test_strategies.py  test_subgraph_client.py  test_tracker_worker.py  test_utils.py  test_wallet_tracker.py  test_wallet_tracker_async.py
web/: Dockerfile  next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: BacktestForm.tsx  BacktestRunsTable.tsx  CopyButton.tsx  EquityCurve.tsx  GridSearchForm.tsx  InfoTip.tsx  KillSwitchBanner.tsx  (+6 more)
workers/: collector_worker.py  execution_worker.py  signal_worker.py  tracker_worker.py
(+19 files in other folders)
