[project]
name = "copytrader-polymarket"
version = "0.1.0"
description = "Automated copytrading bot for Polymarket — short-horizon scalping with risk management"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Leonardo Aguiar Guedes" }]

dependencies = [
    # HTTP / async
    "httpx>=0.27.0",
    "websockets>=12.0",
    "tenacity>=8.5.0",

    # Config / validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0.1",

    # Storage
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "redis[hiredis]>=5.0.7",

    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",

    # Observability
    "structlog>=24.2.0",
    "prometheus-client>=0.20.0",

    # GraphQL (subgraph)
    "gql[httpx]>=3.5.0",

    # On-chain (Fase 4 — install agora pra travar versão)
    "py-clob-client>=0.17.0",
    "web3>=6.20.0",

    # Misc
    "python-dateutil>=2.9.0",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "respx>=0.21.1",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-pyyaml>=6.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "workers"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle / pyflakes
    "I",            # isort
    "B",            # flake8-bugbear
    "UP",           # pyupgrade
    "SIM",          # flake8-simplify
    "RUF",          # ruff-specific
]
ignore = ["E501"]  # line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers --tb=short"
markers = [
    "integration: integration tests (require services)",
    "slow: slow tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["app/storage/migrations/"]

[tool.coverage.run]
source = ["app", "workers"]
omit = ["*/migrations/*", "*/tests/*"]
